调整cmake，sqlite3使用外部系统自行安装， jypyter使用sh启动，用以设置环境变量

--- a/pythonUsage/prepare_train_faces.ipynb
+++ b/pythonUsage/prepare_train_faces.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,8 +26,6 @@
     "\n",
     "import os\n",
     "import sys\n",
-    "sys.path.append('/usr/local/lib64')\n",
-    "sys.path.append('/home/wilson/faceEmotionCppLinux/lib')\n",
     "\n",
     "# 引入功能库\n",
     "import extractFace as feExtracter"
@@ -35,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,28 +84,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OSError",
-     "evalue": "libfaceEmotion.so: cannot open shared object file: No such file or directory",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-1117bcb884b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# 创建实例\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0minstance\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeExtracter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreateInstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# 遍历原始图片的根目录\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/wilson/faceEmotionCppLinux/pythonUsage/extractFace.py\u001b[0m in \u001b[0;36mcreateInstance\u001b[0;34m()\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcreateInstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m     \u001b[0;31m# 加载内部库\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m     \u001b[0mfe\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcdll\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLoadLibrary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"libfaceEmotion.so\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m     \u001b[0;31m# 初始化实例\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/python3-3.6.2/lib/python3.6/ctypes/__init__.py\u001b[0m in \u001b[0;36mLoadLibrary\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    424\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    425\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mLoadLibrary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 426\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dlltype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    427\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    428\u001b[0m \u001b[0mcdll\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLibraryLoader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCDLL\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/python3-3.6.2/lib/python3.6/ctypes/__init__.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, mode, handle, use_errno, use_last_error)\u001b[0m\n\u001b[1;32m    346\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    347\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 348\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_handle\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_dlopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    349\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    350\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_handle\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mOSError\u001b[0m: libfaceEmotion.so: cannot open shared object file: No such file or directory"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:00<00:00, 641.81it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sad 23 face extracted\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (7).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (9).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (23).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (16).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (28).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (4).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (22).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (24).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (26).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (21).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (25).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (8).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (12).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (20).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (14).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (1).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (11).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (2).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (18).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (3).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (13).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (19).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/sad/sad (27).jpg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "100%|██████████| 21/21 [00:00<00:00, 708.16it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "happy 21 face extracted\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (7).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (14).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (19).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (1).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (5).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (26).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (20).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (2).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (25).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (30).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (21).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (11).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (22).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (9).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (24).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (28).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (6).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (27).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (15).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (4).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/happy/happy (23).jpg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "100%|██████████| 11/11 [00:00<00:00, 670.50it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fear 11 face extracted\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/fear/fear (6).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/fear/fear (14).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/fear/fear (7).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/fear/fear (13).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/fear/fear (2).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/fear/fear (3).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/fear/fear (4).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/fear/fear (1).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/fear/fear (10).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/fear/fear (11).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/fear/fear (12).jpg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "100%|██████████| 21/21 [00:00<00:00, 638.56it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "anger 21 face extracted\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (21).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (8).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (26).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (19).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (20).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (7).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (16).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (25).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (10).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (22).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (6).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (24).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (17).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (18).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (11).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (9).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (12).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (5).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (15).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (13).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/anger/anger (23).jpg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "100%|██████████| 3/3 [00:00<00:00, 726.87it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "disgust 3 face extracted\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/disgust/disgust (5).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/disgust/disgust (1).jpg\n",
+      "/home/wilson/workstation/TFResFaceEmotion/extract/disgust/disgust (2).jpg\n",
+      "Done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
     "# 配置原始资源目录，和人脸存放目录\n",
-    "rawImagePath = '/home/wilson/TFResFaceEmotion/raw/'\n",
-    "faceImageSavePath = '/home/wilson/TFResFaceEmotion/extract/'\n",
+    "rawImagePath = '/home/wilson/workstation/TFResFaceEmotion/raw/'\n",
+    "faceImageSavePath = '/home/wilson/workstation/TFResFaceEmotion/extract/'\n",
     "\n",
     "# 创建实例\n",
     "instance = feExtracter.createInstance()\n",
@@ -146,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
