开始加载测试数据

--- a/pythonUsage/predict_emotion.ipynb
+++ b/pythonUsage/predict_emotion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "2.3.0\n",
-      "2.4.0 ['/home/wilson/.local/lib/python3.6/site-packages/tensorflow/keras']\n"
+      "2.4.0 ['/home/wilson/.local/lib/python3.8/site-packages/tensorflow/keras']\n"
      ]
     }
    ],
@@ -26,13 +26,59 @@
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "\n",
+    "from keras.preprocessing import image\n",
+    "\n",
     "print(tf.__version__)\n",
     "print(keras.__version__, keras.__path__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 获取训练的图片列表和分类标签信息\n",
+    "def load_images(data_dir):\n",
+    "    fpaths = []\n",
+    "    labels = []\n",
+    "    \n",
+    "    for label in os.listdir(data_dir):\n",
+    "        labelPath = os.path.join(data_dir, label)\n",
+    "        for fname in os.listdir(labelPath):\n",
+    "            # 文件名\n",
+    "            fpath = os.path.join(labelPath, fname)\n",
+    "            fpaths.append(fpath)\n",
+    "            \n",
+    "            # 标签\n",
+    "            labels.append(label_to_index[label])\n",
+    "    \n",
+    "    # 将图片名和标签 打包成一组，然后进行乱序\n",
+    "    temp = np.array([fpaths,labels])\n",
+    "    temp = temp.transpose()\n",
+    "    np.random.shuffle(temp)\n",
+    "\n",
+    "    fpaths = list(temp[:,0])\n",
+    "    labels = list(temp[:,1])\n",
+    "    labels = [int(i) for i in labels]\n",
+    "    \n",
+    "    return fpaths, labels\n",
+    "\n",
+    "def preprocess_image(image):\n",
+    "    image = tf.image.decode_jpeg(image, channels=3)\n",
+    "    image = tf.image.convert_image_dtype(image,dtype=tf.float32)\n",
+    "    image /= 255.0\n",
+    "    #print(333, image.shape, image)\n",
+    "    return image\n",
+    "\n",
+    "def load_and_preprocess_image(path):\n",
+    "    image = tf.io.read_file(path)\n",
+    "    return preprocess_image(image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -73,55 +119,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/home/wilson/workstation/TFResFaceEmotion/emotions'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-d4130e323324>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0mdata_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"/home/wilson/workstation/TFResFaceEmotion/emotions\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m \u001b[0mall_image_paths\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mall_image_labels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m \u001b[0mpath_ds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_tensor_slices\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_image_paths\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0mimage_ds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpath_ds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mload_and_preprocess_image\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_parallel_calls\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mAUTOTUNE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-3-d4130e323324>\u001b[0m in \u001b[0;36mload_images\u001b[0;34m(data_dir)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mlabel\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mlabelPath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mfname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabelPath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/wilson/workstation/TFResFaceEmotion/emotions'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['anger', 'disgust', 'fear', 'happy', 'sad']\n",
+      "{'anger': 0, 'disgust': 1, 'fear': 2, 'happy': 3, 'sad': 4}\n",
+      "ccccc <BatchDataset shapes: (None, None, None, 3), types: tf.float32>\n",
+      "ddddd [[1.04499221e-01 8.47925246e-02 1.27792329e-01 2.52752870e-01\n",
+      "  4.30163056e-01]\n",
+      " [9.17759955e-01 8.56552260e-11 9.63333528e-04 8.03727880e-02\n",
+      "  9.03916603e-04]\n",
+      " [1.04209213e-02 1.16061524e-03 7.41047179e-03 4.00076173e-02\n",
+      "  9.41000342e-01]\n",
+      " [5.01882613e-01 7.39134327e-02 1.98168054e-01 2.71187257e-02\n",
+      "  1.98917150e-01]\n",
+      " [5.73063374e-01 8.98130331e-03 1.63334742e-01 1.18355274e-01\n",
+      "  1.36265337e-01]\n",
+      " [5.75805716e-02 2.08110170e-04 8.04055929e-01 9.58382487e-02\n",
+      "  4.23170589e-02]\n",
+      " [2.02629473e-02 2.59468006e-03 1.83438081e-02 2.71831483e-01\n",
+      "  6.86967015e-01]\n",
+      " [6.30281866e-02 3.30061726e-02 3.75385433e-02 3.38454209e-02\n",
+      "  8.32581639e-01]\n",
+      " [7.60683894e-01 2.62498594e-04 5.41784540e-02 9.47547182e-02\n",
+      "  9.01204720e-02]\n",
+      " [5.00513939e-04 8.95818870e-04 1.24834070e-03 1.44744851e-02\n",
+      "  9.82880831e-01]\n",
+      " [8.58945370e-01 3.31624079e-07 4.17897897e-03 1.24611758e-01\n",
+      "  1.22635318e-02]\n",
+      " [2.26423979e-01 2.68916297e-03 6.41697496e-02 8.79892409e-02\n",
+      "  6.18727803e-01]\n",
+      " [3.59180383e-02 5.92536572e-03 3.44002843e-02 5.30750006e-02\n",
+      "  8.70681345e-01]\n",
+      " [6.99560642e-01 5.61454818e-02 8.54950100e-02 5.84909320e-02\n",
+      "  1.00307867e-01]\n",
+      " [2.18192309e-01 7.29628140e-03 2.89146960e-01 1.98073223e-01\n",
+      "  2.87291199e-01]\n",
+      " [1.20884910e-01 6.81208540e-03 1.47319064e-01 5.72232008e-01\n",
+      "  1.52751878e-01]\n",
+      " [2.38239735e-01 1.52708637e-02 2.27404281e-01 1.77937940e-01\n",
+      "  3.41147184e-01]\n",
+      " [5.56478918e-01 2.26386525e-02 1.68785937e-02 1.05146445e-01\n",
+      "  2.98857391e-01]\n",
+      " [8.89847100e-01 3.66252079e-03 5.18526882e-02 2.61039333e-03\n",
+      "  5.20272963e-02]\n",
+      " [2.85248131e-01 2.66330410e-02 7.45939910e-02 3.42602223e-01\n",
+      "  2.70922601e-01]\n",
+      " [1.18685357e-01 7.05956388e-03 5.25728881e-01 1.33662179e-01\n",
+      "  2.14863971e-01]\n",
+      " [5.30609977e-04 3.29000338e-09 4.62610787e-03 9.92901385e-01\n",
+      "  1.94186275e-03]\n",
+      " [8.42659652e-01 1.07963486e-02 4.25803773e-02 1.92182306e-02\n",
+      "  8.47453400e-02]\n",
+      " [9.32745486e-02 2.07942023e-04 8.90268851e-03 3.35179307e-02\n",
+      "  8.64096940e-01]\n",
+      " [5.08354127e-01 1.03900336e-01 7.72589073e-02 5.78795969e-02\n",
+      "  2.52607048e-01]\n",
+      " [6.20162725e-01 1.89438146e-02 2.44904626e-02 2.13430762e-01\n",
+      "  1.22972205e-01]\n",
+      " [3.90993617e-02 5.19932956e-02 5.19252084e-02 6.57299161e-01\n",
+      "  1.99682966e-01]\n",
+      " [4.79065776e-02 1.92319509e-04 7.81339332e-02 4.74997424e-02\n",
+      "  8.26267481e-01]\n",
+      " [5.34361741e-03 1.88811717e-03 1.02734966e-02 2.28548702e-02\n",
+      "  9.59639907e-01]\n",
+      " [1.01904333e-01 2.93070395e-02 8.83145332e-02 3.55444044e-01\n",
+      "  4.25030053e-01]\n",
+      " [1.47842944e-01 4.04372811e-02 1.29957482e-01 6.62669837e-02\n",
+      "  6.15495265e-01]\n",
+      " [1.64192915e-02 1.21740624e-03 6.80361837e-02 7.94430315e-01\n",
+      "  1.19896770e-01]\n",
+      " [2.41902918e-01 6.37662504e-03 8.92093685e-03 6.81979358e-02\n",
+      "  6.74601614e-01]\n",
+      " [1.71799257e-01 5.48816097e-05 6.84794009e-01 2.07210947e-02\n",
+      "  1.22630693e-01]\n",
+      " [7.50516960e-03 3.46405068e-06 7.66357839e-01 6.43666834e-02\n",
+      "  1.61766902e-01]\n",
+      " [1.27178431e-01 3.09619140e-02 6.42910078e-02 5.98799646e-01\n",
+      "  1.78768963e-01]\n",
+      " [9.33411479e-01 3.52812727e-04 3.77747640e-02 9.57656279e-03\n",
+      "  1.88843831e-02]\n",
+      " [5.83528243e-02 2.09072535e-03 2.26681661e-02 5.76746166e-01\n",
+      "  3.40142101e-01]\n",
+      " [1.43174618e-01 8.01191945e-03 1.02214385e-02 7.70747602e-01\n",
+      "  6.78444654e-02]\n",
+      " [1.54139608e-01 2.36429716e-03 5.75461388e-02 3.68212551e-01\n",
+      "  4.17737395e-01]\n",
+      " [1.18298665e-01 3.48354205e-02 3.03427279e-01 3.70517373e-01\n",
+      "  1.72921285e-01]\n",
+      " [2.47274250e-01 7.78898422e-04 6.54480577e-01 9.40069556e-02\n",
+      "  3.45930085e-03]\n",
+      " [7.62009561e-01 2.58949213e-03 8.05000514e-02 7.78982416e-02\n",
+      "  7.70026669e-02]\n",
+      " [2.93406337e-01 2.70127610e-04 5.40383101e-01 6.86900765e-02\n",
+      "  9.72502828e-02]\n",
+      " [7.68772438e-02 3.16068064e-03 6.94187507e-02 7.95066595e-01\n",
+      "  5.54766916e-02]\n",
+      " [2.49754921e-01 3.60292010e-02 1.34426206e-01 1.08957008e-01\n",
+      "  4.70832676e-01]\n",
+      " [3.34794330e-03 1.34653601e-04 1.27046406e-01 3.21562946e-01\n",
+      "  5.47908068e-01]\n",
+      " [1.32058099e-01 1.23535801e-05 4.35735695e-02 7.81630158e-01\n",
+      "  4.27258499e-02]\n",
+      " [8.47057998e-03 8.37202311e-01 9.64698847e-03 8.31177551e-03\n",
+      "  1.36368409e-01]\n",
+      " [5.00861602e-03 2.01032381e-04 3.89924869e-02 9.29395556e-01\n",
+      "  2.64023505e-02]\n",
+      " [8.83670509e-01 1.26396650e-02 4.04781923e-02 9.92687885e-03\n",
+      "  5.32847531e-02]\n",
+      " [2.37573422e-02 1.27237178e-02 2.64161769e-02 6.93580955e-02\n",
+      "  8.67744744e-01]\n",
+      " [3.95979643e-01 1.17935315e-02 2.26601154e-01 1.68657452e-01\n",
+      "  1.96968198e-01]\n",
+      " [8.45307887e-01 1.85805845e-07 2.38619391e-02 1.26946747e-01\n",
+      "  3.88321257e-03]\n",
+      " [4.57218438e-02 4.94815868e-05 1.07813604e-01 7.38048136e-01\n",
+      "  1.08366922e-01]\n",
+      " [1.01243392e-01 7.37242590e-05 4.84518381e-03 1.34717179e-02\n",
+      "  8.80366027e-01]\n",
+      " [7.45968759e-01 1.56609248e-03 6.43781852e-03 1.26826972e-01\n",
+      "  1.19200386e-01]\n",
+      " [7.49979019e-02 6.78599405e-04 8.17574114e-02 8.24072719e-01\n",
+      "  1.84933208e-02]\n",
+      " [1.21740088e-01 4.39299107e-01 3.92574407e-02 8.15645084e-02\n",
+      "  3.18138808e-01]\n",
+      " [1.11529455e-01 2.70632154e-05 4.68563810e-02 8.16200912e-01\n",
+      "  2.53861677e-02]\n",
+      " [1.19644962e-01 3.31783220e-02 5.98634541e-01 1.66561216e-01\n",
+      "  8.19809884e-02]\n",
+      " [9.98168111e-01 7.70011013e-07 1.37887686e-03 3.61181534e-04\n",
+      "  9.11122916e-05]\n",
+      " [4.42814082e-01 1.16694383e-01 7.31607080e-02 5.77719919e-02\n",
+      "  3.09558809e-01]\n",
+      " [7.76693877e-03 1.41234414e-05 1.22517198e-01 8.20068300e-01\n",
+      "  4.96333800e-02]\n",
+      " [1.55416772e-01 5.18375576e-01 1.01804152e-01 4.35335301e-02\n",
+      "  1.80869922e-01]\n",
+      " [5.66791557e-02 7.98630863e-02 8.69594216e-02 9.28857923e-02\n",
+      "  6.83612525e-01]\n",
+      " [1.04502767e-01 5.03282342e-03 1.55239433e-01 5.11313565e-02\n",
+      "  6.84093654e-01]\n",
+      " [9.86438617e-02 2.69024726e-03 7.37780869e-01 1.61382612e-02\n",
+      "  1.44746825e-01]\n",
+      " [4.01447080e-02 4.99265501e-03 1.84375420e-01 7.21683979e-01\n",
+      "  4.88032214e-02]\n",
+      " [6.16455078e-01 5.06799202e-04 1.41938925e-01 1.72625542e-01\n",
+      "  6.84736520e-02]\n",
+      " [1.02238208e-02 9.76299518e-04 3.40454914e-02 8.08249652e-01\n",
+      "  1.46504760e-01]\n",
+      " [6.16193004e-02 2.57882293e-05 4.17291820e-02 8.61218572e-01\n",
+      "  3.54071632e-02]\n",
+      " [2.09174737e-01 1.10959010e-02 1.68723494e-01 2.40970161e-02\n",
+      "  5.86908817e-01]\n",
+      " [3.32816422e-01 1.11543725e-03 5.12538068e-02 5.57612836e-01\n",
+      "  5.72015792e-02]\n",
+      " [1.74134485e-02 8.92022626e-07 3.69754108e-03 9.75410700e-01\n",
+      "  3.47746280e-03]\n",
+      " [5.14708571e-02 1.10283036e-04 1.76831465e-02 7.80066431e-01\n",
+      "  1.50669262e-01]\n",
+      " [5.23754835e-01 2.74542908e-05 7.03490898e-02 3.87492150e-01\n",
+      "  1.83764957e-02]\n",
+      " [1.75145268e-02 1.16820671e-02 7.90460408e-02 1.48361009e-02\n",
+      "  8.76921296e-01]\n",
+      " [5.12699723e-01 3.74128600e-03 2.73738429e-02 3.67182679e-02\n",
+      "  4.19466853e-01]]\n"
      ]
     }
    ],
    "source": [
-    "# 获取训练的图片列表和分类标签信息\n",
-    "def load_images(data_dir):\n",
-    "    fpaths = []\n",
-    "    labels = []\n",
-    "    \n",
-    "    for label in os.listdir(data_dir):\n",
-    "        labelPath = os.path.join(data_dir, label)\n",
-    "        for fname in os.listdir(labelPath):\n",
-    "            # 文件名\n",
-    "            fpath = os.path.join(labelPath, fname)\n",
-    "            fpaths.append(fpath)\n",
-    "            \n",
-    "            # 标签\n",
-    "            labels.append(label_to_index[label])\n",
-    "    \n",
-    "    # 将图片名和标签 打包成一组，然后进行乱序\n",
-    "    temp = np.array([fpaths,labels])\n",
-    "    temp = temp.transpose()\n",
-    "    np.random.shuffle(temp)\n",
+    "AUTOTUNE = tf.data.experimental.AUTOTUNE\n",
     "\n",
-    "    fpaths = list(temp[:,0])\n",
-    "    labels = list(temp[:,1])\n",
-    "    labels = [int(i) for i in labels]\n",
-    "    \n",
-    "    return fpaths, labels\n",
+    "# 分类\n",
+    "label_names = [\"anger\", \"disgust\", \"fear\", \"happy\", \"sad\"]\n",
+    "label_to_index = dict((name, index) for index, name in enumerate(label_names))\n",
+    "\n",
+    "print(label_names)\n",
+    "print(label_to_index)\n",
     "\n",
     "# 准备测试数据\n",
     "data_dir = \"/home/wilson/workstation/TFResFaceEmotion/emotions\"\n",
     "\n",
     "all_image_paths, all_image_labels = load_images(data_dir)\n",
+    "#print(\"all_image_lavels\", all_image_labels)\n",
+    "#print(\"all_image_paths\", all_image_paths)\n",
     "path_ds = tf.data.Dataset.from_tensor_slices(all_image_paths)\n",
-    "image_ds = path_ds.map(load_and_preprocess_image, num_parallel_calls=AUTOTUNE)"
+    "image_ds = path_ds.map(load_and_preprocess_image, num_parallel_calls=AUTOTUNE)\n",
+    "final_ds = image_ds.shuffle(buffer_size=10).batch(10)\n",
+    "\n",
+    "print(\"ccccc\", final_ds)\n",
+    "\n",
+    "predict = model.predict(final_ds)\n",
+    "print(\"ddddd\", predict)"
    ]
   },
   {
@@ -148,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
