--- a/pythonUsage/predict_emotion.ipynb
+++ b/pythonUsage/predict_emotion.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,17 @@
     "\n",
     "def load_and_preprocess_image(path):\n",
     "    image = tf.io.read_file(path)\n",
-    "    return preprocess_image(image)"
+    "    return preprocess_image(image)\n",
+    "\n",
+    "# 从概率列表里，获取分类\n",
+    "def get_category_from_possiable(possiables):\n",
+    "    index = 0\n",
+    "    maxPoss = 0.0\n",
+    "    for k in range(len(possiables)):\n",
+    "        if possiables[k] > maxPoss:\n",
+    "            index = k\n",
+    "            maxPoss = possiables[k]\n",
+    "    return index"
    ]
   },
   {
@@ -119,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -128,12 +138,88 @@
      "text": [
       "['anger', 'disgust', 'fear', 'happy', 'sad']\n",
       "{'anger': 0, 'disgust': 1, 'fear': 2, 'happy': 3, 'sad': 4}\n",
-      "all_image_lavels 3\n",
-      "all_image_paths 3\n",
-      "ccccc 3 <BatchDataset shapes: (None, None, None, 3), types: tf.float32>\n",
-      "ddddd [[1.5546912e-01 5.1835603e-01 1.0182329e-01 4.3525286e-02 1.8082638e-01]\n",
-      " [2.9352793e-01 2.7005767e-04 5.4037380e-01 6.8687424e-02 9.7140826e-02]\n",
-      " [1.5417261e-01 2.3653368e-03 5.7573602e-02 3.6828071e-01 4.1760775e-01]]\n"
+      "all_image_lavels 79\n",
+      "all_image_paths 79\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (16).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (22).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (25).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (17).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (15).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (5).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (15).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (6).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (2).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (4).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (24).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (6).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (8).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (18).jpg\n",
+      "!!! predict: [2 fear/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (13).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (16).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (25).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (21).jpg\n",
+      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (6).jpg\n",
+      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (3).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (21).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (25).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (22).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (4).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (18).jpg\n",
+      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (4).jpg\n",
+      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (11).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (10).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (19).jpg\n",
+      "!!! predict: [0 anger/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (8).jpg\n",
+      "predict: [1 disgust/disgust] /home/wilson/workstation/TFResFaceEmotion/emotions/disgust/disgust (2).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (1).jpg\n",
+      "predict: [1 disgust/disgust] /home/wilson/workstation/TFResFaceEmotion/emotions/disgust/disgust (5).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (19).jpg\n",
+      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (7).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (26).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (19).jpg\n",
+      "!!! predict: [4 sad/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (1).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (27).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (14).jpg\n",
+      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (10).jpg\n",
+      "!!! predict: [4 sad/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (14).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (14).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (3).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (12).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (9).jpg\n",
+      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (13).jpg\n",
+      "!!! predict: [3 happy/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (12).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (23).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (9).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (5).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (27).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (23).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (11).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (2).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (22).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (28).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (11).jpg\n",
+      "predict: [2 fear/fear] /home/wilson/workstation/TFResFaceEmotion/emotions/fear/fear (2).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (23).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (30).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (1).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (7).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (21).jpg\n",
+      "predict: [1 disgust/disgust] /home/wilson/workstation/TFResFaceEmotion/emotions/disgust/disgust (1).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (7).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (13).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (11).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (28).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (26).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (24).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (20).jpg\n",
+      "predict: [3 happy/happy] /home/wilson/workstation/TFResFaceEmotion/emotions/happy/happy (7).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (24).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (20).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (9).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (26).jpg\n",
+      "predict: [4 sad/sad] /home/wilson/workstation/TFResFaceEmotion/emotions/sad/sad (20).jpg\n",
+      "predict: [0 anger/anger] /home/wilson/workstation/TFResFaceEmotion/emotions/anger/anger (12).jpg\n",
+      "correct 0.9367088607594937 74/79\n"
      ]
     }
    ],
@@ -151,8 +237,8 @@
     "data_dir = \"/home/wilson/workstation/TFResFaceEmotion/emotions\"\n",
     "\n",
     "all_image_paths, all_image_labels = load_images(data_dir)\n",
-    "all_image_paths = all_image_paths[:3]\n",
-    "all_image_labels = all_image_labels[:3]\n",
+    "# all_image_paths = all_image_paths[:3]\n",
+    "# all_image_labels = all_image_labels[:3]\n",
     "\n",
     "print(\"all_image_lavels\", len(all_image_labels))\n",
     "print(\"all_image_paths\", len(all_image_paths))\n",
@@ -161,10 +247,19 @@
     "#final_ds = image_ds.shuffle(buffer_size=10).batch(10)\n",
     "final_ds = image_ds.batch(1)\n",
     "\n",
-    "print(\"ccccc\", len(final_ds), final_ds)\n",
-    "\n",
     "predict = model.predict(final_ds)\n",
-    "print(\"ddddd\", predict)"
+    "# print(\"ddddd\", predict)\n",
+    "\n",
+    "correct = 0\n",
+    "for k in range(len(predict)):\n",
+    "    category = get_category_from_possiable(predict[k])\n",
+    "    if category == all_image_labels[k]:\n",
+    "        correct += 1\n",
+    "        print(\"predict: [{} {}/{}] {}\".format(category, label_names[category], label_names[all_image_labels[k]], all_image_paths[k]))\n",
+    "    else:\n",
+    "        print(\"!!! predict: [{} {}/{}] {}\".format(category, label_names[category], label_names[all_image_labels[k]], all_image_paths[k]))\n",
+    "    \n",
+    "print(\"correct {} {}/{}\".format(correct/len(predict), correct, len(predict)))"
    ]
   },
   {
